changes to fix problem with proxy

--- a/build.gradle
+++ b/build.gradle
@@ -6,9 +6,25 @@ apply plugin: 'scala'
 sourceCompatibility = 1.8
 
 repositories {
-    jcenter()
     mavenLocal()
-    mavenCentral()
+
+    maven {
+        url "https://plugins.gradle.org/m2/"
+    }
+    maven {
+        credentials {
+            username NEXUS3_USERNAME
+            password NEXUS3_PASSWORD
+        }
+        url "https://cdcp-wbench.wesp.telekom.net/nexus3/repository/atlassian_public/"
+    }
+    maven {
+        credentials {
+            username NEXUS3_USERNAME
+            password NEXUS3_PASSWORD
+        }
+        url "https://cdcp-wbench.wesp.telekom.net/nexus3/repository/maven-releases/"
+    }
 }
 
 dependencies {
