--- a/build.gradle
+++ b/build.gradle
@@ -47,7 +47,9 @@ dependencies {
     compile 'com.typesafe:config:1.3.3'
 
     compile 'com.github.fommil.netlib:all:1.1.2'
-    compile "net.sf.ucanaccess:ucanaccess:4.0.4"
+    compile "net.sf.ucanaccess:ucanaccess:5.0.0"
+    compile group: 'com.healthmarketscience.jackcess', name: 'jackcess', version: '2.1.11'
+    compile group: 'org.hsqldb', name: 'hsqldb', version: '2.2.8'
 
     compile group: 'com.crealytics', name: 'spark-excel_2.11', version: '0.13.1'
 
