nexus url updated

--- a/build.gradle
+++ b/build.gradle
@@ -16,14 +16,14 @@ repositories {
             username NEXUS3_USERNAME
             password NEXUS3_PASSWORD
         }
-        url "https://cdcp-wbench.wesp.telekom.net/nexus3/repository/atlassian_public/"
+        url "https://cdcp-wbench.workbench.telekom.de/nexus3/repository/atlassian_public/"
     }
     maven {
         credentials {
             username NEXUS3_USERNAME
             password NEXUS3_PASSWORD
         }
-        url "https://cdcp-wbench.wesp.telekom.net/nexus3/repository/maven-releases/"
+        url "https://cdcp-wbench.workbench.telekom.de/nexus3/repository/maven-releases/"
     }
 }
 
